@@ -56,3 +56,4 @@ int ltextCodepointToUTF8( lua_State* L );
 /* Text strings management functions (no UTF-8 strings, only byte chars) */
 int ltextTextInsert( lua_State* L );
 int ltextTextSplit( lua_State* L );
+int ltextTextFindIndex( lua_State* L );
